<resources>
    <string name="app_name">DemoDucat</string>
    <string name="login">LOGIN</string>

    <string name="facebook_app_id">813788225725660</string>
    <string name="fb_login_protocol_scheme">fb813788225725660</string>
    <array name="stringarray">
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="patients_name">Patients name</string>
    <string name="patients_age">Patients age</string>
    <string name="patients_gender">Patients gender</string>
    <string name="patients_city">Patients city</string>
    <string name="patients_dob">Patients dob</string>
    <string name="submit">SUBMIT</string>
    <string name="edit">EDIT</string>
</resources>
